# pyxis

./: .gitignore  AGENTS.md  AUDIT-2026-06-23.md  CLAUDE.md  CONTEXT.md  DEVELOPMENT.md  LICENSE  PRD.md  PROJECT-STATUS.md  README.md
.github/workflows/: codeql.yml
archive/: draft-v1.md
docs/: prd-v0.2.0-skill-flow.md
docs/adr/: 0001-skill-flow-architecture.md  0002-platform-agnostic-base-discipline.md
docs/agents/: issue-tracker.md
examples/: spike_dedupe.py
examples/ttlcache/: pyproject.toml
examples/wordstats/: pyproject.toml
model-tests/: CHANGELOG.md  FINDINGS.md  PATCH-REVIEW.md  REVISED-PLAN-SECOND-REVIEW.md  REVISED-PLAN.md  RUNBOOK.md  RUNS-LOG.md  TESTING.md  pyproject.toml
model-tests/fixtures/ttlcache-buggy/: README.md  pyproject.toml
model-tests/fixtures/ttlcache-buggy/src/ttlcache/: __init__.py  cache.py
model-tests/fixtures/ttlcache-buggy/tests/: test_cache.py
model-tests/fixtures/wordstats-baseline/: README.md  pyproject.toml
model-tests/fixtures/wordstats-baseline/src/wordstats/: __init__.py
model-tests/fixtures/wordstats-baseline/tests/: conftest.py
model-tests/history/: CHANGELOG.md  INDEPENDENT-RECOMMENDATIONS.md  REVISED-PLAN.md
model-tests/scripts/: extract_opencode_transcript.py
model-tests/tests/: test_extract_opencode_transcript.py
skills/: README.md
skills/_shared/: ADR-FORMAT.md  CONTEXT-FORMAT.md  LANGUAGE.md  PLATFORM.md
skills/debug/: SKILL.md
skills/diagnose/: SKILL.md
skills/grill-me/: SKILL.md
skills/handoff/: SKILL.md
skills/improve-codebase-architecture/: INTERFACE-DESIGN.md  SKILL.md
(+19 files in other folders)
