[project]
name = "ttlcache"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Davis McCracken", email = "davis.mccracken@proton.me" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.5,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.155.2",
    "prek>=0.4.4",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "ty>=0.0.46",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--strict-markers", "--strict-config", "-ra"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
